@@ -1,5 +1,5 @@
 [paths]
-sharedir = "/usr/local/share/forge"
+#sharedir = "/usr/local/share/forge"
 #datadir = "/home/erik/opt/worldforge/share/ember/data"
 
 #[media]
@@ -49,7 +49,7 @@ cullingdistance = 32
 detailtile = 4
 pagesource = EmberTerrain
 pagesize = 257
-tilesize = 33
+tilesize = 65
 maxpixelerror = 5
 maxmipmaplevel = 5
 vertexnormals = false
