@@ -4,6 +4,5 @@
 PluginFolder=/usr/lib/OGRE
 
 Plugin=RenderSystem_GL.so
-Plugin=Plugin_FileSystem.so
 Plugin=Plugin_ParticleFX.so
 Plugin=Plugin_CgProgramManager.so
