@@ -1,18 +1,19 @@
+[General]
 # Worldforge subversion repository should go here
 FileSystem=common/
 #FileSystem=modeldefinitions/
-
-FileSystem=fonts/
 FileSystem=materials/programs/
 FileSystem=materials/scripts/
 FileSystem=materials/textures/
 FileSystem=models/
 FileSystem=particle/
-
 FileSystem=packs/pig/
 FileSystem=packs/squirrel/
 
+FileSystem=fonts/
 FileSystem=gui/
+
+FileSystem=materials/splatting/
 
 
 
